<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2018. AppDynamics LLC and its affiliates.
  ~ All Rights Reserved.
  ~ This is unpublished proprietary source code of AppDynamics LLC and its affiliates.
  ~ The copyright notice above does not evidence any actual or intended publication of such source code.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.appdynamics.extensions</groupId>
    <artifactId>websphere-mq-monitoring-extension</artifactId>
    <version>7.0.7</version>
    <packaging>jar</packaging>
    <name>websphere-mq-monitoring-extension</name>
    <url>http://maven.apache.org</url>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
        <lib.dir>${basedir}/lib</lib.dir>
        <ibm.mq.lib.version>9.4.0.0</ibm.mq.lib.version>
        <target.dir>${project.build.directory}/WMQMonitor</target.dir>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.appdynamics</groupId>
            <artifactId>machineagent-repackaged</artifactId>
            <version>4.0.5.1</version>
            <scope>provided</scope>
        </dependency>
        <!--<dependency>
            <groupId>com.ibm</groupId>
            <artifactId>com.ibm.mq</artifactId>
            <scope>system</scope>
            <version>${ibm.mq.lib.version}</version>
            <systemPath>${lib.dir}/com.ibm.mq.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.ibm</groupId>
            <artifactId>com.ibm.mq.jmqi</artifactId>
            <scope>system</scope>
            <version>${ibm.mq.lib.version}</version>
            <systemPath>${lib.dir}/com.ibm.mq.jmqi.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.ibm</groupId>
            <artifactId>com.ibm.mq.pcf</artifactId>
            <scope>system</scope>
            <version>${ibm.mq.lib.version}</version>
            <systemPath>${lib.dir}/com.ibm.mq.pcf.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.ibm</groupId>
            <artifactId>com.ibm.mq.headers</artifactId>
            <scope>system</scope>
            <version>${ibm.mq.lib.version}</version>
            <systemPath>${lib.dir}/com.ibm.mq.headers.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.ibm</groupId>
            <artifactId>com.ibm.mq.commonservices</artifactId>
            <scope>system</scope>
            <version>${ibm.mq.lib.version}</version>
            <systemPath>${lib.dir}/com.ibm.mq.commonservices.jar</systemPath>
        </dependency>-->
        <!--<dependency>
            <groupId>com.ibm</groupId>
            <artifactId>connector</artifactId>
            <version>${ibm.mq.lib.version}</version>
            <scope>system</scope>
            <systemPath>${lib.dir}/connector.jar</systemPath>
        </dependency>-->
        <dependency>
            <groupId>com.ibm</groupId>
            <artifactId>com.ibm.mq.allclient</artifactId>
            <scope>system</scope>
            <version>${ibm.mq.lib.version}</version>
            <systemPath>${lib.dir}/com.ibm.mq.allclient.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.appdynamics</groupId>
            <artifactId>appd-exts-commons</artifactId>
            <version>2.2.20</version>
        </dependency>   
        <!-- Needed at runtime by Machine Agent classloader (JSONException, JSONObject) -->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20231013</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
        <!-- Use Mockito (JDK 17 compatible); PowerMock removed -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.12.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>17</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>--add-opens java.base/jdk.internal.reflect=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <filters>
                        <filter>
                            <artifact>com.appdynamics:appd-exts-commons</artifact>
                            <excludes>
                                <exclude>workbench/lib/jquery/jquery-2.2.1.min.js</exclude>
                            </excludes>
                        </filter>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/*.SF</exclude>
                                <exclude>META-INF/*.DSA</exclude>
                                <exclude>META-INF/*.RSA</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Implementation-Title>WMQMonitor v${project.version} Build Date ${maven.build.timestamp}</Implementation-Title>
                                        <Main-Class>com.appdynamics.extensions.workbench.WorkbenchServerLauncher</Main-Class>
                                    </manifestEntries>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.6</version>
                <executions>
                    <execution>
                        <id>download-new-jquery</id>
                        <phase>generate-resources</phase>
                        <configuration>
                            <target>
                                <mkdir dir="${project.build.outputDirectory}/workbench/lib/jquery"/>
                                <get src="https://code.jquery.com/jquery-3.7.1.min.js"
                                     dest="${project.build.outputDirectory}/workbench/lib/jquery/jquery-3.7.1.min.js"
                                     skipexisting="true"/>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>install</id>
                        <phase>install</phase>
                        <configuration>
                            <target>
                                <mkdir dir="${target.dir}"/>
                                <copy todir="${target.dir}">
                                    <fileset dir="src/main/resources/conf" includes="monitor.xml,config.yml"/>
                                    <fileset dir="${project.basedir}" includes="LICENSE.txt"/>
                                    <fileset dir="${project.basedir}" includes="NOTICE.txt"/>
                                </copy>
                                <copy todir="${target.dir}">
                                    <fileset dir="${project.build.directory}" includes="${project.build.finalName}.${project.packaging}"/>
                                </copy>
                                <copy todir="${target.dir}">
                                    <fileset dir="." includes="LICENSE"/>
                                </copy>
                                <zip destfile="${target.dir}-${project.version}.zip">
                                    <zipfileset dir="${target.dir}" filemode="755" prefix="WMQMonitor/"/>
                                </zip>
                                <delete dir="${target.dir}"/>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.1</version>
            </plugin>
            <plugin>
                <artifactId>maven-scm-plugin</artifactId>
                <version>1.8.1</version>
                <configuration>
                    <tag>${project.artifactId}-${project.version}</tag>
                </configuration>
            </plugin>
        </plugins>

    </build>
    <repositories>
        <repository>
            <id>github-maven-repo</id>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <url>https://github.com/Appdynamics/maven-repo/raw/master/releases</url>
        </repository>
    </repositories>
    <scm>
        <connection>scm:git:https://github.com/Appdynamics/websphere-mq-monitoring-extension.git</connection>
    </scm>
</project>